manifest/spring/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-stable
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http-app
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-canary
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http-app
      port: 8080
      targetPort: 8080
